--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <hr>
         </section>
         <section class="justify-content-center d-flex">
-            <article id="grilla" class="row" >
+            <article id="grilla" class="row container" >
          
             </article>
         </section>
